--- a/src/app/components/merch-content/merch-content.component.scss
+++ b/src/app/components/merch-content/merch-content.component.scss
@@ -1,6 +1,6 @@
 .merch-content {
-  color: black;
-  background-color: white;
+  color: var(--black);
+  background-color: var(--white);
 
   .merch-item {
     padding-top: 200px;
