--- a/src/app/components/mobile-header/mobile-header.component.scss
+++ b/src/app/components/mobile-header/mobile-header.component.scss
@@ -1,7 +1,7 @@
 .popup {
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: var(--white);
   z-index: 99;
   position: fixed;
 
