--- a/src/app/components/project-content/project-content.component.scss
+++ b/src/app/components/project-content/project-content.component.scss
@@ -1,6 +1,6 @@
 .card-content {
-  color: black;
-  background-color: white;
+  color: var(--black);
+  background-color: var(--white);
 
   .card-content-container {
     padding: 250px 0 0 75px;
@@ -38,10 +38,10 @@
       font-weight: 400;
       line-height: 54px;
       letter-spacing: 0.5px;
-      color: black;
+      color: var(--black);
       padding: 25px 80px;
       border-radius: 160px;
-      background-color: #E9E9E9B2;
+      background-color: var(--gray);
     }
 
     .mb-400 {
@@ -56,8 +56,6 @@
 
 @media (max-width: 999px) {
   .card-content {
-    color: black;
-    background-color: white;
 
     .card-content-container {
       padding: 200px 0 0 20px;
