--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -36,10 +36,10 @@
       left: 40px;
 
       .service {
-        background-color: white;
+        background-color: var(--white);
         border-radius: 20px;
         padding: 12px 36px;
-        color: black;
+        color: var(--black);
         font-weight: 400;
         font-size: 24px;
         line-height: 25px;
