--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,17 @@
 }
 
 :root {
-  --bg-color: #FFF;
+  --white: #ffffff;
+  --black: #000000;
+  --gray: #E9E9E9B2;
+  --text-gray: rgba(0, 0, 0, 0.25);
 }
 
 [data-theme="dark"] {
-  --bg-color: #000000;
+  --white: #000000;
+  --black: #ffffff;
+  --gray: #E9E9E926;
+  --text-gray: #FFFFFF40;
 }
 
 
@@ -54,7 +60,7 @@ body, html, .video-background {
 
 body {
   font-family: 'WilliamTextLC';
-  background-color: black;
+  background-color: var(--);
   overflow-x: hidden;
   margin: 0;
 }
@@ -64,7 +70,7 @@ h2 {
   font-size: 90px;
   font-weight: 900;
   line-height: 80px;
-  color: black;
+  color: var(--black);
   letter-spacing: -2px;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -94,12 +100,17 @@ input {
   outline: none;
   text-decoration: none;
   border: transparent;
+  background-color: transparent;
 
   &:hover, &:active, &:focus {
     border: transparent;
     outline: none;
     text-decoration: none;
   }
+}
+
+textarea {
+  background-color: transparent;
 }
 
 ul {
@@ -219,21 +230,21 @@ img {
 }
 
 .background-white {
-  background-color: white;
+  background-color: var(--white);
 }
 
 .text-black {
   font-size: 34px;
   font-weight: 400;
   line-height: 45px;
-  color: black;
+  color: var(--black);
 }
 
 .text-gray {
   font-size: 34px;
   font-weight: 400;
   line-height: 45px;
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--text-gray);
 }
 
 .text-title {
@@ -260,16 +271,10 @@ img {
 }
 
 .merch {
-  //position: relative;
-  //border-radius: 50px;
-  //width: 100%;
-  //z-index: 999;
-  //overflow: auto;
 
   .border {
-    //mix-blend-mode: difference;
     width: 1%;
-    border-left: 1px solid black;
+    border-left: 1px solid var(--black);
     height: calc(100% - 84px);
     position: fixed;
     left: 42px;
