--- a/frontend/src/app/components/project-content/project-content.component.html
+++ b/frontend/src/app/components/project-content/project-content.component.html
@@ -1,26 +1,27 @@
-<div class="d-flex w-100 card-content">
-  <div class="card-content-container d-flex direction-column a-i-start w-100">
-    <markdown class="text-title w-80 mb-70" [data]="project.title"></markdown>
+<div class="d-flex w-100 card-content" *ngIf="project|async; let project">
+  <div *ngIf="(project?.blocks?.length||0); let length"
+       class="card-content-container d-flex direction-column a-i-start w-100">
+    <markdown class="text-title w-80 mb-70" [data]="project?.name"></markdown>
     <div class="container-slider">
       <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
-        <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
+        <div class="service" *ngFor="let tag of project?.tags">{{tag}}</div>
       </div>
     </div>
-    <div class="text-gray mb-50">Задача</div>
-    <markdown class="text-black mb-80" [data]="project.tasks"></markdown>
-    <img [src]="project.img_main" alt="picture" class="mb-400 w-94"/>
-    <div class="text-gray mb-50">Что мы сделали</div>
-    <markdown class="text-black mb-80" [data]="project.results"></markdown>
-    <img [src]="project.img_results" alt="picture" class="mb-300 w-70"/>
-    <div class="text-gray mb-50">Исследование</div>
-    <div class="text-black mb-80 w-50">{{project.research}}</div>
-    <img [src]="project.img_research" alt="picture" class="mb-300 w-70"/>
-    <app-statistics class="mb-300 ml5"></app-statistics>
-    <div class="text-gray mb-50">Нейминг</div>
-    <div class="text-black mb-80 w-50">{{project.naming}}</div>
-    <img [src]="project.img_naming" alt="picture" class="mb-60 w-94"/>
+
+    <div *ngFor="let description of project?.blocks; let i = index">
+      <app-statistics *ngIf="i === length - 1" class="mb-300 ml5 d-block"></app-statistics>
+
+      <div class="text-gray mb-50">{{description.title}}</div>
+      <markdown [class]="'text-black mb-80 ' + (i === length - 1 ? 'w-50':'')"
+                [data]="description.description"></markdown>
+      <img *ngIf="i !== length - 1" [src]="description.image" alt="picture"
+           [class]="i === 0 ? 'mb-400 w-94' : 'mb-300 w-70'"/>
+      <img *ngIf="i === length - 1" [src]="description.image" alt="picture"
+           class="mb-60 w-94"/>
+    </div>
+
     <div class="d-flex direction-row flex-wrap w-95 gap-10 mb-400">
-      <div class="service" *ngFor="let service of project.services">{{service.service}}</div>
+      <div class="service" *ngFor="let tag of project?.tags">{{tag}}</div>
     </div>
     <app-works class="mb-400 ml7"></app-works>
     <app-form class="ml5"></app-form>
