--- a/frontend/src/app/pages/components/services/services.component.html
+++ b/frontend/src/app/pages/components/services/services.component.html
@@ -2,7 +2,7 @@
   <div class="container d-flex j-c-start direction-column">
     <h2 class="h2">Услуги</h2>
     <div class="d-flex w-80 direction-row flex-wrap">
-      <div class="d-flex j-c-space-between direction-column item w-25 mb-60" *ngFor="let item of items">
+      <div class="service-item d-flex j-c-space-between direction-column item w-25 mb-60" *ngFor="let item of items">
         <div class="text-black">{{item.black}}</div>
         <div class="text-gray hover"><span class="text-black">{{item.company}}</span>{{item.description}}</div>
       </div>
