--- a/frontend/src/app/pages/components/services/services.component.scss
+++ b/frontend/src/app/pages/components/services/services.component.scss
@@ -19,7 +19,10 @@
   -moz-transition: 1s all ease-in-out;
   -webkit-transition: 1s all ease-in-out;
 
-  &:hover {
+}
+
+.service-item:hover {
+  .hover {
     opacity: 1.00;
   }
 }
