--- a/frontend/src/app/pages/components/form/form.component.scss
+++ b/frontend/src/app/pages/components/form/form.component.scss
@@ -143,6 +143,7 @@ textarea {
   .text-black, .text-gray {
     font-size: 17px;
     line-height: 22px;
+    white-space: nowrap;
   }
 
   textarea {
@@ -201,6 +202,7 @@ textarea {
   .text-black, .text-gray {
     font-size: 25px;
     line-height: 30px;
+    white-space: nowrap;
   }
 
   textarea {
