--- a/frontend/src/app/components/project-content/project-content.component.html
+++ b/frontend/src/app/components/project-content/project-content.component.html
@@ -1,24 +1,56 @@
 <div class="d-flex w-100 card-content" *ngIf="project|async; let project">
   <div *ngIf="(project?.blocks?.length||0); let length"
        class="card-content-container d-flex direction-column a-i-start w-100">
-    <markdown class="text-title w-80 mb-70" [data]="project?.name"></markdown>
-    <div class="container-slider">
-      <div class="d-flex direction-row flex-wrap w-100 gap-10 mb-400">
-        <div class="service" *ngFor="let tag of project?.tags">{{tag}}</div>
-      </div>
+    <markdown class="text-title w-80" [data]="project?.name"></markdown>
+    <markdown class="text-title w-70" style="margin-bottom: 70px; color: var(--text-gray);">
+      {{project.short_description}}
+    </markdown>
+
+    <div class="d-flex direction-row flex-wrap w-95 gap-10 mb-400">
+      <div class="service" *ngFor="let tag of project?.tags">{{tag}}</div>
     </div>
+
 
     <div *ngFor="let description of project?.blocks; let i = index">
       <app-statistics *ngIf="i === length - 1" class="mb-300 ml5 d-block"></app-statistics>
 
       <div class="text-gray mb-50">{{description.title}}</div>
-      <markdown [class]="'text-black mb-80 ' + (i === length - 1 ? 'w-50':'')"
+      <markdown [class]="'text-black mb-80 w-70 ' + (i === length - 1 ? 'w-50':'')"
                 [data]="description.description"></markdown>
       <img *ngIf="i !== length - 1" [src]="description.image" alt="picture"
            [class]="i === 0 ? 'mb-400 w-94' : 'mb-300 w-70'"/>
       <img *ngIf="i === length - 1" [src]="description.image" alt="picture"
            class="mb-60 w-94"/>
     </div>
+
+
+    <!--    <div *ngFor="let description of project?.blocks; let i = index">-->
+    <!--      <app-statistics *ngIf="i === length - 1" class="mb-300 ml5 d-block"></app-statistics>-->
+
+    <!--      <div class="text-gray mb-50">{{description.title}}</div>-->
+    <!--      <markdown [class]="'text-black mb-80 w-70 ' + (i === length - 1 ? 'w-50':'')"-->
+    <!--                [data]="description.description"></markdown>-->
+
+    <!--      &lt;!&ndash; Проверка на тип контента &ndash;&gt;-->
+    <!--      <ng-container *ngIf="description.type === 'image'; else videoBlock">-->
+    <!--        <img *ngIf="i !== length - 1" [src]="description.image" alt="picture"-->
+    <!--             [class]="i === 0 ? 'mb-400 w-94' : 'mb-300 w-70'"/>-->
+    <!--        <img *ngIf="i === length - 1" [src]="description.image" alt="picture"-->
+    <!--             class="mb-60 w-94"/>-->
+    <!--      </ng-container>-->
+
+    <!--      &lt;!&ndash; Блок для видео &ndash;&gt;-->
+    <!--      <ng-template #videoBlock>-->
+    <!--        <div *ngIf="description.type === 'video'" class="video-container">-->
+    <!--          <iframe *ngIf="i !== length - 1" [src]="getSafeUrl(description.videoUrl)" frameborder="0"-->
+    <!--                  allow="autoplay; fullscreen" allowfullscreen-->
+    <!--                  [class]="i === 0 ? 'mb-400 w-94' : 'mb-300 w-70'"></iframe>-->
+    <!--          <iframe *ngIf="i === length - 1" [src]="getSafeUrl(description.videoUrl)" frameborder="0"-->
+    <!--                  allow="autoplay; fullscreen" allowfullscreen-->
+    <!--                  class="mb-60 w-94"></iframe>-->
+    <!--        </div>-->
+    <!--      </ng-template>-->
+    <!--    </div>-->
 
     <div class="d-flex direction-row flex-wrap w-95 gap-10 mb-400">
       <div class="service" *ngFor="let tag of project?.tags">{{tag}}</div>
