--- a/frontend/src/app/components/slider/slider.component.html
+++ b/frontend/src/app/components/slider/slider.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="text-gray w-70">
       <a [routerLink]="'/projects/'+project.id" class="text-black">{{project.name}}</a>
-      {{project.short_description}}
+      <span> {{project.short_description}}</span>
     </div>
   </div>
 </div>
