--- a/frontend/src/app/pages/components/form/form.component.html
+++ b/frontend/src/app/pages/components/form/form.component.html
@@ -25,15 +25,15 @@
         <label class="text-black">Ваше сообщениe отправлено!</label>
       </div>
 
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center gap-15">
+      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
         <label class="text-black">Имя</label>
         <input name="name" required/>
       </div>
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center gap-15">
+      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
         <label class="text-black">Телефон</label>
         <input name="phone" required/>
       </div>
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center gap-15">
+      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
         <label class="text-black">E-mail</label>
         <input name="email" required/>
       </div>
