--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -68,6 +68,18 @@ body {
   color: var(--black);
 }
 
+markdown {
+  p {
+    margin-block-end: 0 !important;
+  }
+
+  em {
+    font-family: 'WilliamTextLCItalic';
+    font-style: italic;
+    font-size: 1.2em;
+  }
+}
+
 h2 {
   font-family: 'ABCFavoritCYR';
   font-size: 90px;
@@ -257,6 +269,11 @@ markdown, .d-block {
   font-weight: 400;
   line-height: 45px;
   color: var(--text-gray);
+
+  span {
+    font-family: 'WilliamTextLCItalic';
+    font-style: italic;
+  }
 }
 
 .text-title {
