--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,8 +1,7 @@
 <div class="header w-100">
   <div class="header-container container d-flex a-i-start j-c-space-between">
     <a routerLink="/" class="logo">
-      брейнстор
-      <div class="sub-logo">ТМ</div>
+      <img src="images/logo.svg" alt="logo"/>
     </a>
     <div class="d-flex a-i-center gap-15 menu-item" *ngIf="!isMobile">
       <a href="#" (click)="$event.preventDefault();toSection('services')">Услуги</a>
