--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -13,22 +13,7 @@
     margin-top: 42px;
 
     .logo {
-      font-family: 'ABCFavoritCYRItalic';
-      position: relative;
-      margin-top: -20px;
-      font-weight: 900;
-      font-size: 90px;
-      font-style: italic;
-
-      .sub-logo {
-        font-family: 'ABCFavoritCYRItalic';
-        position: absolute;
-        top: 20px;
-        right: -40px;
-        font-style: italic;
-        font-weight: 900;
-        font-size: 23px;
-      }
+      max-width: 556px;
     }
 
     .menu-item {
@@ -48,15 +33,7 @@
       //width: auto;
 
       .logo {
-        margin-left: 0;
-        position: relative;
-        font-size: 37px;
-
-        .sub-logo {
-          top: 10px;
-          right: -20px;
-          font-size: 12px;
-        }
+        max-width: 228px;
       }
     }
   }
@@ -74,15 +51,7 @@
       }
 
       .logo {
-        margin-left: 0;
-        position: relative;
-        font-size: 45px;
-
-        .sub-logo {
-          top: 10px;
-          right: -20px;
-          font-size: 15px;
-        }
+        max-width: 278px;
       }
     }
   }
@@ -100,15 +69,7 @@
       }
 
       .logo {
-        margin-left: -25px;
-        position: relative;
-        font-size: 60px;
-
-        .sub-logo {
-          top: 10px;
-          right: -20px;
-          font-size: 15px;
-        }
+        max-width: 373px;
       }
     }
   }
