--- a/frontend/src/app/components/slider/slider.component.scss
+++ b/frontend/src/app/components/slider/slider.component.scss
@@ -20,14 +20,12 @@
     margin-right: 40px;
 
     .banner {
-      position: relative;
       height: 600px;
       border-radius: 60px;
       margin-bottom: 36px;
-
-      img {
-        max-width: 70%;
-      }
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
     .services {
