--- a/frontend/src/app/components/mobile-header/mobile-header.component.html
+++ b/frontend/src/app/components/mobile-header/mobile-header.component.html
@@ -10,7 +10,7 @@
     <div class="d-flex direction-column gap-30">
       <div class="d-flex direction-column gap-5">
         <span>+7 (843) 251-99-99</span>
-        <span>hellobrainstore.agency</span>
+        <span>hello@brainstore.agency</span>
       </div>
       <div class="d-flex direction-column gap-5">
         <span>Telegram</span>
