--- a/frontend/src/app/pages/team/team.component.html
+++ b/frontend/src/app/pages/team/team.component.html
@@ -3,10 +3,11 @@
   <div class="team-content w-100 d-flex">
     <div class="d-flex direction-column a-i-start w-100 team-content-container">
       <div class="text-title w-80 mb-400">Команда героев на пути своих приключений справится с любой миссией, <span>когда их
-        объединяет товарищество и зов мечты.</span> Присылай портфолио на hello@brainstore.agency и начни свой квест!
+        объединяет товарищество и зов мечты.</span> Присылай портфолио на hello{{'@'}}brainstore.agency и начни свой
+        квест!
       </div>
       <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello@brainstore.agency
+        hello{{'@'}}brainstore.agency
       </div>
       <img src="images/team.png" alt="picture" class="mb-60 w-94"/>
       <div class="text-gray w-50 mb-400">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед Попов, Серега
