--- a/frontend/src/app/pages/contacts/contacts.component.html
+++ b/frontend/src/app/pages/contacts/contacts.component.html
@@ -3,11 +3,11 @@
   <div class="team-content w-100 d-flex">
     <div class="d-flex direction-column a-i-start w-100 team-content-container">
       <div class="text-title w-80 mb-400">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello@brainstore.agency с пометкой желаемой должности в теме письма<span> и не забывай
+        hello{{'@'}}brainstore.agency с пометкой желаемой должности в теме письма<span> и не забывай
 прикрепить портфолио!</span>
       </div>
       <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello@brainstore.agency
+        hello{{'@'}}brainstore.agency
       </div>
       <img src="images/contacts.png" alt="picture" class="mb-60 w-94"/>
       <div class="text-gray w-50 mb-400 mobile-margin">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед
