--- a/frontend/src/app/pages/components/manifesto/manifesto.component.html
+++ b/frontend/src/app/pages/components/manifesto/manifesto.component.html
@@ -1,9 +1,6 @@
 <div class="w-100 background-white">
   <div class="container d-flex j-c-end direction-column gap-10 padding">
     <div class="text-gray">Наш манифест</div>
-    <markdown class="text-title w-95">
-      Экспериментировать с *эстетикой, культурным полем, медиа-ДНК* современного общества, художественными методами и
-      гуманистично мыслить.
-    </markdown>
+    <markdown class="text-title w-95" [data]="settings.settings?.manifest"></markdown>
   </div>
 </div>
