--- a/frontend/src/app/pages/components/customers/customers.component.html
+++ b/frontend/src/app/pages/components/customers/customers.component.html
@@ -1,20 +1,20 @@
 <div class="w-100 background-white">
   <div class="container d-flex direction-column padding">
     <h2 class="mb-60">Клиенты</h2>
-    <div class="direction-column d-flex j-c-space-between border h-760">
-      <div class="d-flex w-80 flex-wrap direction-row gap-10 ml-40">
+    <div class="direction-column d-flex j-c-space-between border">
+      <div class="d-flex w-80 flex-wrap direction-row gap-10 ml-40" style="margin-bottom: 60px">
         <a href="#" class="company"
-             *ngFor="let customer of customers"
-             (mouseenter)="showDescription(customer)"
-             (mouseleave)="hideDescription(customer)">{{customer.company}}</a>
+           *ngFor="let client of settings.settings?.clients; index as i"
+           (mouseenter)="showDescription(i)">{{client.name}}</a>
       </div>
       <div class="description d-flex direction-column gap-60"
-           *ngFor="let customer of customers"
-           [ngClass]="{'visible': customer.showDescription, 'hidden': !customer.showDescription}">
-        <img [src]="customer.logo" alt="logo"/>
-        <div class="text-gray">{{customer.description}}</div>
+           *ngFor="let client of settings.settings?.clients; index as i"
+           [ngClass]="{'visible': currentIndex ===i, 'hidden': currentIndex !==i}">
+        <img [src]="client.image_url" alt="logo"/>
+        <div class="text-gray">{{client.description}}</div>
         <div class="d-flex direction-row flex-wrap gap-10">
-          <div class="text-black" *ngFor="let service of customer.services">{{service.service}}</div>
+          <div class="text-black" style="width: auto"
+               *ngFor="let tag of client.tags;let i = index">{{tag}}{{i + 1 !== client.tags.length ? ' /' : ''}}</div>
         </div>
       </div>
     </div>
