--- a/frontend/src/app/pages/components/form/form.component.html
+++ b/frontend/src/app/pages/components/form/form.component.html
@@ -23,16 +23,16 @@
         <label class="text-black">Ваше сообщениe отправлено!</label>
       </div>
 
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
-        <label class="text-black">Имя</label>
+      <div *ngIf="!success" class="form-item direction-row a-i-center">
+        <label class="text-black">Имя&nbsp;&nbsp;</label>
         <input name="name" required/>
       </div>
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
-        <label class="text-black">Телефон</label>
+      <div *ngIf="!success" class="form-item direction-row a-i-center">
+        <label class="text-black">Телефон&nbsp;&nbsp;</label>
         <input name="phone" required/>
       </div>
-      <div *ngIf="!success" class="form-item d-flex direction-row a-i-center">
-        <label class="text-black">E-mail</label>
+      <div *ngIf="!success" class="form-item direction-row a-i-center">
+        <label class="text-black">E-mail&nbsp;&nbsp;</label>
         <input name="email" required/>
       </div>
       <div *ngIf="!success" class="form-textarea d-flex direction-column gap-15">
