--- a/frontend/src/app/pages/components/form/form.component.scss
+++ b/frontend/src/app/pages/components/form/form.component.scss
@@ -25,9 +25,9 @@
   input {
     width: 80%;
     height: 40px;
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 400;
-    color: rgba(0, 0, 0, 0.5);
+    //color: rgba(0, 0, 0, 0.5);
   }
 }
 
