--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -1,82 +1,126 @@
-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+.home-slide {
 
-}
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
 
-.video-background {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  overflow: hidden;
-}
-
-.content {
-  color: var(--white);
-  backdrop-filter: blur(40px);
-  position: relative;
-  height: 100vh;
-
-  .border {
-    border-left: 1px solid var(--white);
-    margin-left: 42px;
-    height: calc(100% - 84px);
   }
 
-  .logo {
-    width: 50%;
+  .video-background {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    //position: absolute;
+    //right: 0;
+    //bottom: 0;
+    //overflow: hidden;
   }
-}
-
-@media (max-width: 999px) {
 
   .content {
+    color: var(--white);
+    top: 0;
+    position: absolute;
+    height: 100vh;
+
+    &.blur {
+      backdrop-filter: blur(40px);
+    }
+
     .border {
-      border-left: none;
-      margin-left: 0;
-      height: 0;
+      //border-left: 1px solid var(--white);
+      margin-left: 42px;
+      height: calc(100% - 84px);
     }
-  }
 
-}
-
-@media (min-width: 1000px) and (max-width: 1450px) {
-  .content {
     .logo {
-      width: 40%;
-    }
-  }
-}
-
-@media (min-width: 1451px) and (max-width: 2000px) {
-  .content {
-    .logo {
-      width: 41%;
-    }
-  }
-}
-
-@media (min-width: 768px) and (max-width: 999px) {
-
-  .content {
-    .logo {
-      width: 65%;
-    }
-  }
-}
-
-@media (min-width: 370px) and (max-width: 767px) {
-
-  .content {
-    .logo {
-      width: 80%;
+      width: 50%;
     }
   }
 
+  @media (max-width: 999px) {
+
+    .content {
+      .border {
+        border-left: none;
+        margin-left: 0;
+        height: 0;
+      }
+    }
+
+  }
+
+  @media (min-width: 1000px) and (max-width: 2000px) {
+    .content {
+      .logo {
+        width: 40%;
+        margin-top: 113px;
+        margin-left: 26px;
+      }
+    }
+  }
+
+  //@media (min-width: 1451px) and (max-width: 2000px) {
+  //  .content {
+  //    .logo {
+  //      width: 41%;
+  //    }
+  //  }
+  //}
+
+  @media (min-width: 768px) and (max-width: 999px) {
+
+    .content {
+      .logo {
+        width: 65%;
+      }
+    }
+  }
+
+  @media (min-width: 370px) and (max-width: 767px) {
+
+    .content {
+      .logo {
+        width: 80%;
+      }
+    }
+
+  }
+
 }
 
+.p-carousel-content-container {
+  position: relative;
+
+  .p-carousel-indicator-list {
+    position: absolute;
+    gap: 7px;
+    bottom: 174px;
+    left: 75px;
+
+    li {
+      &:before {
+        display: none;
+      }
+
+      .p-carousel-indicator-button {
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        border: 2px solid #FFF;
+        background: #FFF;
+      }
+
+      &.p-carousel-indicator-active {
+        .p-carousel-indicator-button {
+          background: transparent;
+        }
+      }
+    }
+  }
+
+}
