--- a/frontend/src/app/pages/components/form/form.component.scss
+++ b/frontend/src/app/pages/components/form/form.component.scss
@@ -41,6 +41,7 @@
 }
 
 .btn {
+  font-family: 'WilliamTextLC', serif;
   margin-top: 100px;
   background-color: var(--black);
   border-radius: 40px;
