--- a/frontend/src/app/pages/components/statistics/statistics.component.html
+++ b/frontend/src/app/pages/components/statistics/statistics.component.html
@@ -6,6 +6,8 @@
         <div class="count mb-50">{{item.count}}</div>
         <div class="text-black w-70">{{item.text}}</div>
       </div>
+
+      <div class="section d-flex direction-column"></div>
     </div>
   </div>
 </div>
