--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -12,14 +12,16 @@
     height: 0;
     margin-top: 52px;
 
-    &:before {
-      content: "";
-      display: block;
-      height: 96vh;
-      position: absolute;
-      border-left: 1px solid var(--white);
-      top: 30px;
-      left: 30px;
+    @media (min-width: 1000px) {
+      &:before {
+        content: "";
+        display: block;
+        height: calc(100vh - 60px);
+        position: fixed;
+        border-left: 1px solid var(--white);
+        top: 30px;
+        left: 30px;
+      }
     }
 
     .logo {
