--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -1,20 +1,3 @@
-<!--<div class="video-background w-100 h-100">-->
-<!--  <video autoplay muted loop>-->
-<!--    <source src="/video/123.mov" type="video/mp4">-->
-<!--  </video>-->
-<!--</div>-->
-<!--<div class="content w-100 d-flex a-i-center j-c-center">-->
-<!--  <div class="w-100 h-100 d-flex a-i-center j-c-center border">-->
-<!--    <img src="images/biglogo.svg" alt="logo" class="mb-50 logo"/>-->
-<!--    <div class="bottom-container d-flex direction-column j-c-start gap-10">-->
-<!--      <img src="images/circles.svg" class="circles" alt="icon"/>-->
-<!--      <div class="text-title">Brainstore — креативное агенство-->
-<!--        <span>созидателей, художников, дизайнеров и стратегов</span>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-
 <p-carousel
   [value]="settings.settings?.home_slides || []"
   [numVisible]="1"
@@ -23,11 +6,18 @@
   [showIndicators]="true"
   [showNavigators]="false"
   (onPage)="change($event)"
+  [page]="page"
 >
   <ng-template let-item pTemplate="item">
-    <div [class]="'home-slide '">
-      <div class="video-background w-100 h-100">
-        <img *ngIf="item.image_url" [src]="item.image_url"/>
+    <div
+      [class]="'home-slide '"
+      (mouseover)="hovered = true"
+      (mouseout)="hovered = false"
+    >
+      <div
+        class="video-background w-100 h-100"
+        [style.background-image]="'url('+item.image_url+')'"
+      >
         <iframe
           *ngIf="item.video"
           class="mb-60 w-94"
@@ -38,12 +28,15 @@
           allow="autoplay; clipboard-write; encrypted-media;"
         ></iframe>
       </div>
-      <div [class]="'content w-100 d-flex a-i-center j-c-center ' + (item.show_logo ? 'blur' : '')">
+      <div [class]="'content w-100 d-flex a-i-center j-c-center ' + (item.apply_blur ? 'blur' : '')">
         <div class="w-100 h-100 d-flex a-i-center j-c-center border">
           <img *ngIf="item.show_logo" src="images/biglogo.svg" alt="logo" class="mb-50 logo"/>
           <div class="bottom-container d-flex direction-column j-c-start gap-10">
             <!--            <img src="images/circles.svg" class="circles" alt="icon"/>-->
-            <markdown class="text-title" [data]="item.description"></markdown>
+            <a *ngIf="!item.link" [href]="item.link">
+              <markdown class="text-title" [data]="item.description"></markdown>
+            </a>
+            <markdown *ngIf="item.link" class="text-title" [data]="item.description"></markdown>
           </div>
         </div>
       </div>
