--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -15,6 +15,9 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
     //position: absolute;
     //right: 0;
     //bottom: 0;
@@ -26,6 +29,10 @@
     top: 0;
     position: absolute;
     height: 100vh;
+
+    a {
+      color: var(--white);
+    }
 
     &.blur {
       backdrop-filter: blur(40px);
